--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Last Frame Getter - 動画の最後の1フレームを画像化</title>
+    <meta name="description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。ブラウザだけで完結し、アップロードすると自動で抽出します。" />
+    <meta name="theme-color" content="#646cff" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Last Frame Getter - 動画の最後の1フレームを画像化" />
+    <meta property="og:description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。ブラウザだけで完結。" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/vite.svg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Last Frame Getter" />
+    <meta name="twitter:description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。" />
+    <meta name="robots" content="index,follow" />
+
+    <link rel="manifest" href="/manifest.webmanifest" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Last Frame Getter",
+        "description": "MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。",
+        "url": "/"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
