fix(page): OGP画像とTwitterカード設定を更新

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 120'%3E%3Ctext y='1em' font-size='96'%3E%F0%9F%93%B9%EF%B8%8F%3C/text%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Last Frame Getter - 動画の最後の1フレームを画像化</title>
     <meta name="description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。ブラウザだけで完結し、アップロードすると自動で抽出します。" />
@@ -12,12 +12,13 @@
     <meta property="og:title" content="Last Frame Getter - 動画の最後の1フレームを画像化" />
     <meta property="og:description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。ブラウザだけで完結。" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/vite.svg" />
+    <meta property="og:image" content="/get_ogp.png" />
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Last Frame Getter" />
     <meta name="twitter:description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。" />
+
     <meta name="robots" content="index,follow" />
 
     <link rel="manifest" href="/manifest.webmanifest" />
