--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 120'%3E%3Ctext y='1em' font-size='96'%3E%F0%9F%93%B9%EF%B8%8F%3C/text%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://lastframe.umaibo.dev/" />
     <title>Last Frame Getter - 動画の最後の1フレームを画像化</title>
     <meta name="description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。ブラウザだけで完結し、アップロードすると自動で抽出します。" />
     <meta name="theme-color" content="#646cff" />
@@ -12,12 +16,16 @@
     <meta property="og:title" content="Last Frame Getter - 動画の最後の1フレームを画像化" />
     <meta property="og:description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。ブラウザだけで完結。" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/get_ogp.png" />
+    <meta property="og:url" content="https://lastframe.umaibo.dev/" />
+    <meta property="og:image" content="https://lastframe.umaibo.dev/get_ogp.png" />
+    <meta property="og:site_name" content="Last Frame Getter" />
+    <meta property="og:locale" content="ja_JP" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Last Frame Getter" />
     <meta name="twitter:description" content="MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。" />
+    <meta name="twitter:image" content="https://lastframe.umaibo.dev/get_ogp.png" />
 
     <meta name="robots" content="index,follow" />
 
@@ -29,7 +37,7 @@
         "@type": "WebSite",
         "name": "Last Frame Getter",
         "description": "MP4/WebM の最後の1フレームを PNG で取得できる無料のWebツール。",
-        "url": "/"
+        "url": "https://lastframe.umaibo.dev/"
       }
     </script>
   </head>
